Subiendo todos los archivos del proyecto

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,15 @@
-sonar.projectKey=Prueba12
-sonar.host.url=http://localhost:9000
-sonar.token=sqp_b3461c84c17544430c5189e8fa7514bd4881b1b9
+sonar.projectKey=deberes1.1
+sonar.projectName=deberes1.1
+sonar.projectVersion=1.0
+
+# Carpeta raíz del código fuente
 sonar.sources=.
+
+# Codificación de los archivos
 sonar.sourceEncoding=UTF-8
+
+# Dónde vive tu SonarQube
+sonar.host.url=http://localhost:9000
+
+# Token de análisis (del proyecto en tu SonarQube local)
+sonar.login=sqp_b2fab7e081bea38d4a7a229f1ff35a08bb782901
